--- a/project4/latex/report.tex
+++ b/project4/latex/report.tex
@@ -81,7 +81,10 @@
 
 %This is how we create an abstract section.
 \begin{abstract}
-    insert abstract
+    This paper will present the results of a Markov-Chain Monte Carlo simulation of the 2D-Ising model. The model results in a numerical
+    simulation of the ferro magnetic spin. The use of the lattice model allows the modelling of expectation values and the development
+    of a larger 2-dimensional lattice model. This model predicts the critical temperature of the magnetic system and thus
+    the collapse of all magnetic properties.
 \end{abstract}
 \maketitle
 
@@ -89,6 +92,17 @@
 % ===========================================
 \section{Introduction}
 %
+In this paper the analytical and numerical models shall be developed. The advantages of the numerical model shall be made apparent with
+the simulation of larger systems than analytically practical. The analytical development of the Ising model was originally done for the 
+one dimensional case with no phase transitions. As will be proven quite clearly by the 2 dimensional case there actually exists a phase 
+transition for the ferro-magnetic case. 
+\\
+\\
+The analytical model is developed for a small 2x2 lattice and used to verify the validity of the numerical model. This is physically 
+relevant to make sure the model is on the right track. A deviation in the more trivial cases would naturally be undesirable. The model 
+aims to predict the critical temperature of the ferro magnetic case. 
+\\
+\\
 
 
 % ===========================================
